--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="logo">
           <h1>
             <a href="#">
-              <span>GAGAH OFFC</span>
+              <span>Gagah official</span>
             </a>
           </h1>
         </div>
@@ -37,7 +37,7 @@
           <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
             <div data-aos="zoom-out">
               <h1>WELCOME TO<span> GAGAH OFFC</span></h1>
-              <h2>GAGAH OFFC READY KEBUTUHAN HOSTING, PANEL PTERODLTY, ADMIN PANEL,, SC BOT, DLL</h2>
+              <h2>GAGAH OFFICIAL READY KEBUTUHAN HOSTING, PANEL PTERODLTY, ADMIN PANEL,, SC BOT, DLL</h2>
               <div class="text-center text-lg-start">
                 <a href="#pricing" class="btn-get-started">SELANJUTNYA</a>
               </div>
@@ -78,7 +78,7 @@
                 <li>1GB DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -92,7 +92,7 @@
                 <li>2GB DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
                 <li>3GB DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
                 <li>4GB DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -134,7 +134,7 @@
                 <li>5GB DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -148,7 +148,7 @@
                 <li>6GB DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
                 <li>7GB DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -176,7 +176,7 @@
                 <li>8GB DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -190,7 +190,7 @@
                 <li>9GB DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -205,7 +205,7 @@
                 <li>UNLIMITED DISK</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -220,7 +220,7 @@
                 <li>AUTO BALIK MODAL</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -236,7 +236,7 @@
                 <li>AUTO BALIK MODAL</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -244,7 +244,7 @@
             <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
               <span class="advanced">Recommend</span>
               <h3>PT PANEL</h3>
-              <h4><sup>Rp</sup>19.000,-<span></span></h4>
+              <h4><sup>Rp</sup>25.000,-<span></span></h4>
               <ul>
                 <li>OWNER PANEL</li>
                 <li>BISA OPEN ADMIN PANEL</li>
@@ -253,7 +253,7 @@
                 <li>AUTO BALIK MODAL</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -261,7 +261,7 @@
             <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
               <span class="advanced">Recommend</span>
               <h3>OWNER PANEL</h3>
-              <h4><sup>Rp</sup>23.000,-<span></span></h4>
+              <h4><sup>Rp</sup>35.000,-<span></span></h4>
               <ul>
                 <li>PT PANEL</li>
                 <li>BISA OPEN OWNER PANEL</li>
@@ -271,7 +271,7 @@
                 <li>AUTO BALIK MODAL</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -287,11 +287,11 @@
               <h3>NOKOS INDO</h3>
               <h4><sup>Rp</sup>5.000,-<span></span></h4>
               <ul>
-                <li>NEGARA LAIN JUGA ADA</li>
-                <li>HARGA SESUAI NEGARA</li>
+                <li>SEDIA JUGA NOKOS NEGARA LAIN</li>
+                <li>HARGA DI BERDASARKAN NEGARA</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://wa.me/6283115834126" class="btn-buy">BELI</a>
+                <a href="https://wa.me/628985588874" class="btn-buy">BELI</a>
               </div>
             </div>
           </div>
@@ -315,12 +315,12 @@
               <div class="email">
                 <i class="fa-solid fa-envelope"></i>
                 <h4>Email:</h4>
-                <p>GalaxyOfficialReal@gmail.com</p>
+                <p>gagahofficial4@gmail.com</p>
               </div>
               <div class="phone">
                 <i class="fa-solid fa-phone"></i>
                 <h4>Call:</h4>
-                <p>+62 831-1583-4126</p>
+                <p>+62 898-5588-874</p>
               </div>
             </div>
           </div>
@@ -334,9 +334,9 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>GALAXY-OFFICIAL</h3>
+              <h3>GAGAH-OFFC</h3>
               <p class="pb-3"><em></em></p>
-              <p>West Java,<br>Indonesian<br><br><strong>Phone:</strong> +62 831-1583-4126<br><strong>Email:</strong> GalaxyOfficialReal@gmail.com<br></p>
+              <p>West Java,<br>Indonesian<br><br><strong>Phone:</strong> +62 831-1583-4126<br><strong>Email:</strong> gagahofficial4@gmail.com<br></p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 footer-newsletter">
@@ -347,8 +347,8 @@
       </div>
     </div>
     <div class="container">
-      <div class="copyright">&copy; Copyright <strong><span>GAGAH OFFC</span></strong>. All Rights Reserved</div>
-      <div class="credits">Designed by <a href="https://youtube.com/@galaxymods101">GAGAH OFFC</a></div>
+      <div class="copyright">&copy; Copyright <strong><span>Gagah official</span></strong>. All Rights Reserved</div>
+      <div class="credits">Designed by <a href="https://youtube.com/@gagahaditya972">Gagah official</a></div>
     </div>
   </footer>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"></i></a>
@@ -363,5 +363,5 @@
   <script src="https://api.zeeoneofc.my.id/js/dashboard.js"></script>
   <script src="https://kit.fontawesome.com/32db8fe470.js" crossorigin="anonymous"></script>
   </body>
-            </html>
-        
+                 </html>
+  
